--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectLL1">
         <activity
-            android:name=".presentation.ui.ResultActivity"
+            android:name=".presentation.ui.CheckOutVNPayResultActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
