refactor(auth): split login/register into MVVM structure
Signed-off-by: ptlong14 <thanhlong01042004@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,13 +68,13 @@
             android:name=".presentation.ui.DetailFoodActivity"
             android:exported="false" />
         <activity
-            android:name=".AdminAddFood"
+            android:name=".AdminAddFoodTest"
             android:exported="false" />
         <activity
-            android:name=".auth.RegisterActivity"
+            android:name=".presentation.ui.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".auth.LoginActivity"
+            android:name=".presentation.ui.LoginActivity"
             android:exported="false">
         </activity>
         <activity
