--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_yummy_app"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_yummy_app_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectLL1">
+        <activity
+            android:name=".presentation.ui.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.ChangePasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.UserInformationActivity"
             android:exported="false" />
@@ -75,8 +81,7 @@
             android:exported="false" />
         <activity
             android:name=".presentation.ui.LoginActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="true"
